--- a/style/participe.css
+++ b/style/participe.css
@@ -9,16 +9,17 @@
 }
 
 .part-imgHeader img {
-    margin-left: 50px;
-    height: 700px;
-    width: 550px;
+    margin-left: 40px;
+    height: 520px;
+    width: 450px;
+    margin-top: 100px;
 }
 
 .part-chamadaTexto {
     
     color: rgb(0, 170, 212); /*Azul médio*/
     margin: 0;
-    width: 700px;
+    width: 600px;
     height: 290px;
     display: flex;
     justify-content: space-evenly;
@@ -35,7 +36,7 @@
 }
 
 .part-chamadaTexto p {
-    margin-top: 20px;
+    margin-top: 1px;
     width: 580px;
     word-wrap:normal;
     font-family: 'ubuntu';
@@ -49,7 +50,7 @@
 /* SECTION: PRIMEIROS PASSOS */
 .main-section{
     width: 90vw;
-    height: 65vh;
+    height: 75vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -61,7 +62,7 @@
 
 .como-func{
     width: 70%;
-    margin: 30px auto;
+    margin: 20px auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -112,6 +113,7 @@
 
 .func-div img{
     width: 25%;
+    height: 20%;
 }
 
 
@@ -134,14 +136,20 @@
     height: 100vh;
 }
 
+
 .form-container{
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: flex-start;
-    background-color: greenyellow;
+    background-color: red;
+    margin-top: 90px;   
+    margin-right: 30px;
+    width: 100%;
+    
 }
+
 
 .form-container p{
     word-wrap:normal;
@@ -150,24 +158,81 @@
     font-size: 1.7rem;
     color:rgb(208, 206, 206);
     text-align: left;
-    width: 30%;
+    width: 40%;
 }
+
+.boxpp{
+    width: 65%;
+    height: 500px;
+    margin: 30px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background-color: green; */
+
+
+}
+
+
+.boxpp input{
+    width: 100%;
+    height: 30px;
+    border: none;
+    border-bottom: 2px solid rgb(0, 201, 255);
+    outline: none;
+    box-sizing: border-box;
+    margin-top: 15px;
+    font-size: 15px;
+    
+}
+
+
+::-webkit-input-placeholder{
+    color: rgb(0, 201, 255);
+}
+
+
+
+.boxpp select{
+    width: 32%;
+    height: 30px;
+    color: rgb(0, 201, 255);
+    border: 2px solid rgb(0, 201, 255);
+    box-sizing: border-box;
+    margin-top: 15px;
+}
+
+
+#containPass{
+    width: 49%;
+}
+
+
+#pass{
+    width: 49%; 
+    border: 2px solid rgb(0, 201, 255);
+}
+
 
 .form-container h2{
     text-align: left;
-}
 
-.form-box{
+ }
+
+
+.form-box3{
     width: 100%;
-    padding: 30px 0;
-    background-color: red;
     display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-
-}
-.form-box input{
-    width: 90%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 
+.form-box2{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-between;
+    
+}
