--- a/style/participe.css
+++ b/style/participe.css
@@ -131,9 +131,39 @@
 
 /* SECTION: FORMULARIO */
 .formulario{
-    margin: 0;
+    margin: 0 auto;
     width: 100%;
-    height: 100vh;
+    height: 125vh;
+    flex-direction: column;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+}
+
+.formulario button{
+    background-color: rgb(0, 170, 212);
+    color: white;
+    font-weight: 600;
+    max-width: 300px;
+    min-width: 120px;
+    min-height: 30px;
+    max-height: 45px;
+    padding: 8px 50px;
+    border: none;
+    border-radius: 10px;
+    font-family: 'ubuntu';
+    font-size: 1.2rem;
+    text-align: center;
+    cursor: pointer;
+    margin: 30px 0;
 }
 
 
@@ -143,10 +173,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: flex-start;
-    background-color: red;
-    margin-top: 90px;   
-    margin-right: 30px;
-    width: 100%;
+    width: 65%;
     
 }
 
@@ -168,9 +195,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background-color: green; */
-
-
 }
 
 
@@ -186,6 +210,9 @@
     
 }
 
+#dataNasc{
+    color: rgb(0, 201, 255);
+}
 
 ::-webkit-input-placeholder{
     color: rgb(0, 201, 255);
