--- a/style/footerp.css
+++ b/style/footerp.css
@@ -7,22 +7,22 @@ footer{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* position: fixed;
-    z-index: 50; */
 }
 
-/* footer:focus{
-    display: none;
-    visibility: none;
-    opacity: 0;
-} */
+footer>a{
+    margin-left: 3vw;
+    display: flex;
+    border-radius: 100px;
+}
 
-footer>img{
+footer img{
     height:90px;
-    margin-right: 6px;
-    /* box-shadow: 0 0 30px black inset; */
-    /* border-radius: 50px; */
-    /* background-color: magenta; */
+    margin-top: 5px;
+    transition: .8s;
+}
+
+footer img:hover{
+    transform: scale(1.1);
 }
 
 .icones-footer {
@@ -74,10 +74,15 @@ footer>img{
 
 .footer-links{
     height: 70px;
+    width: 30%;
+    display: flex;
+    align-items: center;
+    /* background-color: red; */
+    justify-content: space-evenly;
 }
 
 .footer-links a{
-    color: white;
+    color: rgba(255, 255, 255, 0.8);
     transform: scale(1.2);
     font-family: 'ubuntu';
     font-weight: Bolder than 600;
@@ -85,5 +90,9 @@ footer>img{
     text-decoration: none;
     padding: 0px 18px;
     box-sizing: border-box;
+}
+
+.footer-links a:hover{
+    color: white;
 }
 
