--- a/style/participe.css
+++ b/style/participe.css
@@ -150,7 +150,7 @@ form{
 
 .formulario button{
     background-color: rgb(0, 170, 212);
-    color: white;
+    color: rgba(255, 255, 255, 0.7);
     font-weight: 600;
     max-width: 300px;
     min-width: 120px;
@@ -158,12 +158,18 @@ form{
     max-height: 45px;
     padding: 8px 50px;
     border: none;
-    border-radius: 10px;
+    border-radius: 5px;
     font-family: 'ubuntu';
     font-size: 1.2rem;
     text-align: center;
     cursor: pointer;
     margin: 30px 0;
+    transition: 0.5s;
+}
+
+.formulario button:hover{
+    color: white;
+    transform: scale(1.1);
 }
 
 
@@ -207,11 +213,8 @@ form{
     box-sizing: border-box;
     margin-top: 15px;
     font-size: 15px;
+    text-align: start;
     
-}
-
-#dataNasc{
-    color: rgb(0, 201, 255);
 }
 
 ::-webkit-input-placeholder{
@@ -222,7 +225,7 @@ form{
 
 .boxpp select{
     width: 32%;
-    height: 30px;
+    height: 40px;
     color: rgb(0, 201, 255);
     border: 2px solid rgb(0, 201, 255);
     box-sizing: border-box;
@@ -237,6 +240,7 @@ form{
 
 #pass{
     width: 49%; 
+    height: 40px;
     border: 2px solid rgb(0, 201, 255);
 }
 
