--- a/style/footerp.css
+++ b/style/footerp.css
@@ -1,6 +1,6 @@
 footer{
     height: 70px;
-    width: 100%;
+    width: 100vw;
     background-image: url('../img/footer/home-repeat.png');
     background-size: cover;
     background-position: center;
@@ -96,3 +96,61 @@ footer img:hover{
     color: white;
 }
 
+@media screen and (max-width: 568px) {
+    footer{height: 20vh; display: flex; flex-direction: column; flex-wrap: wrap; }
+ 
+    footer>a{
+        margin-left: 3vw;
+        display: flex;
+        
+    }
+    
+    footer img{
+        height:60px;
+        width: 125px;
+        margin-top: 5px;
+        transition: .8s;
+    }
+
+    footer nav{
+        display: flex;
+        flex-direction: column;
+        margin: 50px 0;
+    }
+    
+    footer img:hover{transform: none;}
+    
+    .icones-footer {
+        width: 30%;
+        margin: 0;
+        height: 50%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .icones-footer i {
+        display: flex;
+        margin: 0;
+        justify-content:center;
+        align-items: center;
+        text-align: center;
+        font-size: 24px;
+        height: 35px;
+        width: 35px;
+        border-radius: 100px;
+        border:none;
+        color: white;
+        cursor: pointer;
+        transition: .2s ease;   
+    }
+    
+    .footer-links{
+        justify-content: flex-start;
+        display: flex;
+    }
+    .footer-links a{
+        font-size: 0.9rem;
+        text-align: justify;
+    }
+}
