--- a/style/entrar.css
+++ b/style/entrar.css
@@ -114,14 +114,20 @@ button:hover{
 }
 
 
-
-
-
-
-
 @keyframes cor {
     0%{background-color: rgb(0, 201, 255)}
     30%{background-color: rgb(204,251,0)}
     60%{background-color: rgb(0,170,212)}
     100%{background-color: rgb(0, 201, 255)}
 }
+
+
+@media screen and (max-width: 568px){
+    .contain{
+        width: 80vw;
+    }
+    i{
+        font-size: 50px
+    }
+}
+
