--- a/style/participe.css
+++ b/style/participe.css
@@ -1,3 +1,4 @@
+
 /* SESSÃO 1 */
 .part-header-container {
     display: flex;
@@ -274,8 +275,9 @@ form{
         background: url(../img/participe/formados.png);
         background-repeat: no-repeat;
         background-size: 80%;
-        background-position-y: 70%;
-        background-color: rgba(0, 0, 0, 0.918);
+        background-position-y: 80%;
+        background-position-x: 70%;
+        background-color: rgba(0, 0, 0, 0.815);
         background-blend-mode: multiply;
     }
 
@@ -299,8 +301,10 @@ form{
     .main-section {
         border: none;
         box-shadow: 0px 0px 0px;
-        width: 100%;
-height: auto;
+        border-radius: 0;
+        width: 100vw;
+        height: auto;
+        background-color: rgba(211, 240, 255, 0.251);
     }
 
     .como-func {
@@ -311,37 +315,46 @@ height: auto;
     .como-func h2 {
         font-size: 2rem;
         margin: 5px;
+        padding: 0 20px;
     }
 
     .como-func p {
         font-size: 1.1rem;
+        padding: 0 20px;
     }
 
     .func-icones {
-        margin: 0;
-        width: 100%;
+        margin: 0 auto;
+        width: 90%;
         flex-direction: column;
         align-items: center;
-        border: 1px solid red;
     }
 
 .func-div {
     width: 90%;
     height: 200px;
-margin: 20px;
-display:flex;
-justify-content: space-around;
-flex-direction: column;
-align-items: center;}
+    margin: 20px;
+    display:flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+}
 
 .func-icones p {
-    font-size: 1.1rem;
+    font-size: 0.95rem;
+    width: 80%;
 }
 
 .func-icones img {
-    width: 80px;
-    height: 80px;
+    width: 75px;
+    height: 75px;
 }
+
+#process{   width: 83px;
+    height: 80px;}
+
+#benef{   width: 60px;
+    height: 70px;}
 
 .form-container {
     width: 100vw;
