--- a/style/index.css
+++ b/style/index.css
@@ -486,7 +486,6 @@ p{
     justify-content: space-around;
     align-items: center;
     background-color: white;
-    box-shadow: 0px 2px 2px rgba(0,0,0,0.2);
     margin-right: 80px;
     padding: 0;
 }
@@ -611,7 +610,7 @@ p{
         .box-incentivo button {padding: 10px 40px; height: 30%; width: 100%; font-size: 1rem}
         .box-incentivo button:hover{transform: scale(1)}
         /* COMO FUNCIONA */
-        .main-section { width: 100vw; background-color: beige}
+        .main-section { width: 100vw; background-color: white}
         .como-func{width: 90%; justify-content: space-around}
         .como-func h2 {font-size: 1.7rem; margin: 10px}
         .como-func p {font-size: 1.11rem;}
