--- a/style/entrar.css
+++ b/style/entrar.css
@@ -1,10 +1,12 @@
 body{
     height: 100vh;
-    animation: cor 10s infinite;
+    /* animation: cor 10s infinite; */
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
 }
+
 
 a{
     position: absolute;
@@ -25,13 +27,15 @@ i:hover{
 .contain{
     width: 45vw;
     height: 50%;
-    background-color: rgba(255,255, 255, 0.5);
+    /* background-color: rgba(255,255, 255, 0.5); */
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
     border-radius: 15px;
     transition: 1s ease;
+    background: linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.5), rgb(0, 201, 255) );
+    border: 1px solid rgb(0, 201, 255);
 }
 
 .contain:hover{
@@ -70,6 +74,7 @@ input{
     font-size: 20px;
     outline: none;
     transition: 1s ease;;
+    /* border: 1px solid rgb(0, 201, 255); */
 }
 
 input:hover::placeholder{
