debug do formulario

--- a/style/participe.css
+++ b/style/participe.css
@@ -379,8 +379,8 @@ form{
 form {
     width: 85%;
     z-index: 51;
-    position: absolute;
-    z-index: -1;
+    position: relative;
+    z-index: 0;
 }
 
 }
