--- a/style/entrar.css
+++ b/style/entrar.css
@@ -4,24 +4,28 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.5);
+    background: url('../img/entrar/fundo.png');
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-size: cover;
 }
 
 
 a{
     position: absolute;
-    top: 25px;
-    left: 25px;
+    bottom: 25px;
+    right: 25px;
     border-radius: 50%;
 }
 
 i{
     font-size: 70px;
-    color: rgba(255, 255, 255, 0.5);
+    color:  rgb(0,170,212);
+
 }
 
 i:hover{
-    color: white;
+    color: rgb(15, 26, 55, 0.8);
 }
 
 .contain{
@@ -34,26 +38,23 @@ i:hover{
     flex-direction: column;
     border-radius: 15px;
     transition: 1s ease;
-    background: linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.5), rgb(0, 201, 255) );
-    border: 1px solid rgb(0, 201, 255);
+    background: transparent;
+    border: 2px solid rgb(0, 201, 255);
 }
 
-.contain:hover{
-    background: linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5));
-}
 
 .cText{
     width: 90%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     border-radius: 15px;
 }
 
-.cText h3{
+.cText img{
     margin-top: 20px;
-    font-size: 30px;
-    color: rgba(0, 0, 0);
+    width: 200px;
+    
 }
 .cInputs{
     width: 100%;
@@ -71,51 +72,44 @@ input{
     height: 50px;
     border: none;
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     outline: none;
     transition: 1s ease;;
-    /* border: 1px solid rgb(0, 201, 255); */
+
 }
 
-input:hover::placeholder{
-    color: rgb(0, 201, 255);
-}
 input:focus::placeholder{
     visibility: hidden; 
 }
 
 input:nth-child(1){
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    border-bottom: 0.5px solid rgb(0, 201, 255, 0.5);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom: 0.5px solid rgba(0, 0, 0, 0.5);
 }
 
 input:nth-child(2){
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     margin-bottom: 20px;
-    border-top: 1px solid rgb(0, 201, 255, 0.5);
+    border:none;
 }
 
 
 button{
-    width: 50%;
+    width: 90%;
     height: 50px;
-    border-radius: 15px;
+    border-radius: 5px;
     border: none;
-    background-color: rgba(255, 255, 255, 0.8);
-    font-size: 25px;
+    font-size: 20px;
     transition: 1s ease;
     cursor: pointer;
     font-weight: 500;
-    color: rgba(0, 0, 0);
+    color: white;
     margin-bottom: 25px;
     outline: none;
-}
-
-button:hover{
-    width: 90%;
     animation: cor 10s infinite reverse;
+    padding: 5px 20px;
 }
 
 
